<resources>
    <string name="app_name">Assignment 3</string>
    <string name="check_scores">Check Scores</string>
    <string name="exit">Exit</string>
    <string name="play_game">Play Game</string>
    <string name="level_1">Level 1 (EASY)</string>
    <string name="level_2">Level 2 (HARD)</string>
    <string name="please_choose_your_level">Please choose your level</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Log_in">Log In</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="birthdate">Birthdate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="are_you_a">Are you a</string>
    <string name="welcome">Welcome!</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="drag_android_logo_here">Drag Android logo here</string>
    <string name="what_is_2_2">What is 2 + 2?</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="place_answer_here">Place Answer Here</string>
    <string name="_2">2</string>
    <string name="which_image_represents_a_cat">Which image represents a cat?</string>
    <string name="finish">Finish</string>
    <string name="what_is_6_2_1_2">What is 6/2(1+2)?</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="drop_droid_here">Drop Droid Here!</string>
    <string name="drop_droid_here_2nd">Drop Droid here 2nd</string>
    <string name="drop_droid_here_1st">Drop Droid here 1st</string>
    <string name="open_door">Open Door</string>
    <string name="fin">Finish!</string>
    <string name="open_vault">open vault</string>
</resources>