<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".HardGame1">

    <TextView
        android:id="@+id/txtQuestHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="106dp"
        android:text="@string/what_is_6_2_1_2"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/txtTargetHard"
        android:layout_width="148dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:textAlignment="center"
        android:background="@android:color/holo_blue_light"
        android:text="@string/place_answer_here"
        />

    <TextView
        android:id="@+id/txtAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="330dp"
        android:text="@string/_9"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/txtOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="329dp"
        android:text="@string/_1"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/txtOther2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="329dp"
        android:layout_marginEnd="32dp"
        android:text="@string/_3"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/contButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="248dp"
        android:onClick="moveToNextGame"
        android:text="continue"
        tools:ignore="HardcodedText" />
</RelativeLayout>