<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/darker_gray"
    android:layout_height="match_parent"
    tools:context=".LoginSuccessful">

    <Button
        android:id="@+id/checkScoreButton"
        android:layout_width="341dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="337dp"
        android:text="@string/check_scores"
        android:onClick="showScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="341dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="253dp"
        android:text="@string/exit"
        android:onClick="exitGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playGameButton"
        android:layout_width="341dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="415dp"
        android:text="@string/play_game"
        android:onClick="startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>