<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".GameStartActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="329dp"
        android:layout_height="63dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="389dp"
        android:text="@string/level_1"
        android:textColor="@android:color/holo_blue_dark"
        android:onClick="startEasyGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="329dp"
        android:layout_height="63dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="246dp"
        android:text="@string/level_2"
        android:onClick="startHardGame"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="638dp"
        android:text="@string/please_choose_your_level"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />
</androidx.constraintlayout.widget.ConstraintLayout>