<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    tools:context=".EasyGame3">

    <TextView
        android:id="@+id/txtQuest3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="75dp"
        android:text="@string/which_image_represents_a_cat"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtTarget3"
        android:layout_width="223dp"
        android:layout_height="103dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/place_answer_here"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="95dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="326dp"
        app:srcCompat="@drawable/cat"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/dogImageView"
        android:layout_width="88dp"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="312dp"
        app:srcCompat="@drawable/dog"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/horseImageView"
        android:layout_width="114dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="213dp"
        app:srcCompat="@drawable/horse"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="182dp"
        android:onClick="returnToMenu"
        android:text="@string/finish" />

</RelativeLayout>